test/files/events-exp-lang-neg/parameters-missing3.check
parameters-missing3.scala:6: error: unbound parameters
  evt e2(x: Int) = e1(_)
      ^
one error found
